Google home page v1

--- a/index.html
+++ b/index.html
@@ -5,38 +5,39 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-	<nav>
-		<div>Gmail</div>
-		<div>Images</div>
-		<div id="apps"><img src=""></div>
-		<div id="notification"><img src=""></div>
-		<div id="account"><img src=""></div>
-	</nav>
+	<ul>
+		<li>Gmail</li>
+		<li>Images</li>
+	</ul>
 
-	<img id="logo" src="">
-
-	<div id="search_bar"></div>
-
-	<div>
-		<div>Google Search</div>
-		<div>I'm Feeling Lucky</div>
+	<div id="logo">
+		<img src="imgs/googlelogo_color_272x92dp.png">
 	</div>
 
-	<div>
-		<div>Google offered in: </div>
+	<div id="search_bar">
+		<input type="text" name="google_search">
+	</div>
+
+	<div id="ge_bottom">
+		<div class="ge_key">Google Search</div>
+		<div class="ge_key">I'm Feeling Lucky</div>
+	</div>
+
+	<center>
+		<span>Google offered in: </span>
 		<a href="">中文（繁體）</a>
 		<a href="">中文（簡体）</a>
-	</div>
+	</center>
 
 	<footer>
-		<div>Hong Kong</div>
-		<div>
-			<a href="">Advertising</a>
-			<a href="">Business</a>
-			<a href="">About</a>
-			<a href="">Privacy</a>
-			<a href="">Terms</a>
-			<a href="">Settings</a>
+		<div class="bottom"><span id="area">Hong Kong</span></div>
+		<div class="bottom">
+			<a class="terms" href="">Advertising</a>
+			<a class="terms" href="">Business</a>
+			<a class="terms" href="">About</a>
+			<a class="terms" id="frb" href="">Privacy</a>
+			<a class="terms" id="frb" href="">Terms</a>
+			<a class="terms" id="frb" href="">Settings</a>
 		</div>
 	</footer>
 
